# mcp-outsystems-docs

./: .gitignore  README.md  pyproject.toml
osmcp/: _render.py  chunk.py  embed.py  fetch.py  index.py  llms_full.py  llms_txt.py  server.py  sitemap.py  store.py  sync.py  toc.py
spec-first-tdd/: 00-issues.md  00-sftdd-workflow.md  00-use-case.md  LICENSE  README.md
tests/: test_chunk.py  test_fetch.py  test_index.py  test_llms_full.py  test_llms_txt.py  test_server.py  test_sitemap.py  test_store.py  test_sync.py  test_toc.py
