[project]
name = "outsystems-mcp-docs"
version = "0.1.0"
description = "Local MCP server serving OutSystems ODC/O11 documentation"
requires-python = ">=3.11"
dependencies = [
    "fastembed>=0.8.0",
    "mcp[cli]>=1.27.1",
    "numpy>=2.4.6",
    "pyyaml>=6.0",
]

[project.scripts]
sync = "osmcp.sync:main"
osmcp-serve = "osmcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["osmcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
